--- a/css/style.css
+++ b/css/style.css
@@ -6,87 +6,37 @@ html, body {
   background-image: url("../api/src/img/notebook.png");
   /* Pattern grey_sandbag is downloaded from www.subtlepatterns.com */
   }
- 
   
-  /*
-div.container {
+div#mainContainer {
   min-height:100%;
   position:relative;
-  width: 989px; 
+  width: 1000px; 
   margin: 0 auto;
+  border: dotted 3px;
+  border-radius: 5px;
+  border-color: whitesmoke;
   }
   
-div.logo { 
-  background-image: url("../img/backlogo.jpg");
-  width: 989px; 
-  min-height:120px;
+div#mainLogo { 
+  background-image: url("../api/src/img/logo.png");
+  width: 890px; 
+  min-height:175px;
   margin: 5px;
-  border-radius: 7px;
+  border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto
   }
   
-div.content {
-  width: 989px;   
+div#newBook {
+  border: dotted 3px;
+  border-radius: 5px;
+  border-color: #F50057;
+  margin: 3px;
   }
   
-div.footer {
-  clear: both;
-  position: fixed;
-  bottom: 0;
-  background-image: url("../img/backlogo.jpg");
-  width: 989px; 
-  min-height:80px;
-  margin: 5px;
-  border-radius: 7px;
-  text-align: center;
-  color: white; 
+.displayBook {
+  border: dotted 3px;
+  border-radius: 5px;
+  border-color: grey;
+  margin: 3px;
   }
-  
-.logoimage { 
-  height: 90px;
-  width: 90px;
-  border-radius: 45px;
-  margin: 15px;
-  float: left;
-}
-
-a {
-    border: dotted 1px;
-    border-radius: 4px;
-    border-color: green;
-    text-decoration: none;
-    background-color: greenyellow; 
-}
-
-a.warning {
-    border: dotted 1px;
-    border-radius: 4px;
-    border-color: violet;
-    text-decoration: none;
-    background-color: red; 
-    color: black;
-}
-
-.warning { 
-    color: red;
-}
-
-.tweet {
-    border: dashed 1px green;
-    border-radius: 4px;
-}
-
-.tweetbold {
-    border: dashed 1px black;
-    border-radius: 4px;
-}
-
-div.logged { 
-    text-align: right;
-    color: white;
-}
-
-#footerlink8, #footerlink7, #footerlink6, #footerlink5, #footerlink4, #footerlink3, #footerlink2 {
-    background-color: #c2c2a3; 
-}
-
-*/
