--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ div#mainContainer {
   }
   
 div#mainLogo { 
+  /* http://www.forumweb.pl/poczatkujacy-webmaster/tekst-alternatywny-w-css,51325 */
   background-image: url("../api/src/img/logo.png");
   width: 890px; 
   min-height:175px;
