--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html, body {
   padding:0;
   height:100%;
   background-image: url("../img/notebook.png");
-  /* Pattern grey_sandbag is downloaded from www.subtlepatterns.com */
+  /* Pattern notebook.png is downloaded from www.subtlepatterns.com */
   }
   
 div#mainContainer {
